package change and linting update

--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "biosig-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EllipticElysium/biosig-node.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EllipticElysium/biosig-node/issues"
-  },
-  "homepage": "https://github.com/EllipticElysium/biosig-node#readme",
-  "dependencies": {
-    "aes-js": "^3.1.2",
-    "axios": "^0.26.1",
-    "dotenv": "^16.0.0",
-    "pbkdf2": "^3.1.2",
-    "pkcs7-padding": "^0.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "biosig-node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "type": "module",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/EllipticElysium/biosig-node.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/EllipticElysium/biosig-node/issues"
+    },
+    "homepage": "https://github.com/EllipticElysium/biosig-node#readme",
+    "dependencies": {
+        "axios": "^0.26.1",
+        "crypto-js": "^4.1.1",
+        "dotenv": "^16.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
