--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dependencies": {
         "axios": "^0.26.1",
         "crypto-js": "4.1.1",
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "fast-xml-parser": "^4.0.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
